--- a/web-content/index.html
+++ b/web-content/index.html
@@ -67,3 +67,4 @@
 <p>Updated!</p>
 <h1 style="color: red;">DEMO UPDATE!</h1>
 <h1 style="color: red;">DEMO UPDATE-2!</h1>
+<h1 style="color: red;">DEMO UPDATE-3!</h1>
