--- a/web-content/index.html
+++ b/web-content/index.html
@@ -68,3 +68,4 @@
 <h1 style="color: red;">DEMO UPDATE!</h1>
 <h1 style="color: red;">DEMO UPDATE-2!</h1>
 <h1 style="color: red;">DEMO UPDATE-3!</h1>
+<h1 style="color: red;">DEMO UPDATE-4!</h1>
